--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "df603e48-683a-41a6-befc-b5f8c60ac509",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "277ac8ab-962c-4fa7-9bc9-9975ae48b878",
    "metadata": {},
    "outputs": [],
@@ -235,6 +235,8 @@
     "            backup = self.head.data\n",
     "            self.head = self.head.below\n",
     "            self.count -= 1\n",
+    "            if self.head == None\n",
+    "                self.tail = None\n",
     "            return backup\n",
     "        raise IndexError(\"Queue is empty\")\n",
     "\n",
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "acb40b1b-262f-482c-ba24-3f11b918534f",
    "metadata": {},
    "outputs": [
@@ -335,6 +337,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d98085dc-bda4-4004-8d59-73d0a6659420",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19357cd5-9e21-4b74-beae-1fd74f172470",
    "metadata": {},
    "outputs": [],
    "source": []
